tests/NormalTests/paczka1/fuzzy1/87387470.err
Error in line 6: lYaxN A312 16,0
Error in line 12: lYaxN A834 64,4
Error in line 34: RQU A8?4 14,5
Error in line 30: JOSkqs2qr A417 111,1
